--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
 		"postcss-simple-vars": "^7.0.1",
 		"postcss-sort-media-queries": "^4.3.0",
 		"postcss-will-change-transition": "^1.2.0",
+		"tailwindcss": "^3.2.6",
 		"webp-in-css": "^0.8.0"
 	}
 }
